cmake_minimum_required(VERSION 3.9)
project(Sphere)

set(CMAKE_CXX_STANDARD 11)

add_executable(Sphere
        addon/dio/sample/kernel.cpp
        addon/dio/sample/kernel.h
        addon/dio/sample/main.cpp
        addon/dio/spidio.cpp
        addon/dio/spidio.h
        addon/display/sample/kernel.cpp
        addon/display/sample/kernel.h
        addon/display/sample/main.cpp
        addon/display/hd44780device.cpp
        addon/display/hd44780device.h
        addon/fatfs/sample/kernel.cpp
        addon/fatfs/sample/kernel.h
        addon/fatfs/sample/main.cpp
        addon/fatfs/diskio.cpp
        addon/fatfs/diskio.h
        addon/fatfs/ff.c
        addon/fatfs/ff.h
        addon/fatfs/ffconf.h
        addon/fatfs/ffunicode.c
        addon/fatfs/syscall.cpp
        addon/linux/atomic.h
        addon/linux/barrier.h
        addon/linux/bug.cpp
        addon/linux/bug.h
        addon/linux/compiler.h
        addon/linux/completion.cpp
        addon/linux/completion.h
        addon/linux/delay.cpp
        addon/linux/delay.h
        addon/linux/device.cpp
        addon/linux/device.h
        addon/linux/dma-mapping.cpp
        addon/linux/dma-mapping.h
        addon/linux/err.h
        addon/linux/errno.h
        addon/linux/interrupt.cpp
        addon/linux/interrupt.h
        addon/linux/io.h
        addon/linux/ioport.h
        addon/linux/jiffies.h
        addon/linux/kern_levels.h
        addon/linux/kernel.h
        addon/linux/kthread.cpp
        addon/linux/kthread.h
        addon/linux/linuxdevice.cpp
        addon/linux/linuxdevice.h
        addon/linux/linuxemu.cpp
        addon/linux/linuxemu.h
        addon/linux/list.h
        addon/linux/module.h
        addon/linux/mutex.cpp
        addon/linux/mutex.h
        addon/linux/pagemap.h
        addon/linux/platform_device.cpp
        addon/linux/platform_device.h
        addon/linux/printk.cpp
        addon/linux/printk.h
        addon/linux/pthread.cpp
        addon/linux/pthread.h
        addon/linux/raspberrypi-firmware.cpp
        addon/linux/raspberrypi-firmware.h
        addon/linux/rwlock.cpp
        addon/linux/rwlock.h
        addon/linux/sched.h
        addon/linux/semaphore.cpp
        addon/linux/semaphore.h
        addon/linux/slab.h
        addon/linux/spinlock.cpp
        addon/linux/spinlock.h
        addon/linux/sprintf.cpp
        addon/linux/string.h
        addon/linux/timer.cpp
        addon/linux/timer.h
        addon/linux/types.h
        addon/linux/uaccess.h
        addon/OneWire/sample/ds18x20.cpp
        addon/OneWire/sample/ds18x20.h
        addon/OneWire/sample/kernel.cpp
        addon/OneWire/sample/kernel.h
        addon/OneWire/sample/main.cpp
        addon/OneWire/OneWire.cpp
        addon/OneWire/OneWire.h
        addon/Properties/sample/kernel.cpp
        addon/Properties/sample/kernel.h
        addon/Properties/sample/main.cpp
        addon/Properties/properties.cpp
        addon/Properties/properties.h
        addon/Properties/propertiesbasefile.cpp
        addon/Properties/propertiesbasefile.h
        addon/Properties/propertiesfatfsfile.cpp
        addon/Properties/propertiesfatfsfile.h
        addon/Properties/propertiesfile.cpp
        addon/Properties/propertiesfile.h
        addon/qemu/gpiodemo/kernel.cpp
        addon/qemu/gpiodemo/kernel.h
        addon/qemu/gpiodemo/main.cpp
        addon/rtc/sample/kernel.cpp
        addon/rtc/sample/kernel.h
        addon/rtc/sample/main.cpp
        addon/rtc/mcp7941x.cpp
        addon/rtc/mcp7941x.h
        addon/rtc/rtc.h
        addon/SDCard/sample/kernel.cpp
        addon/SDCard/sample/kernel.h
        addon/SDCard/sample/main.cpp
        addon/SDCard/emmc.cpp
        addon/SDCard/emmc.h
        addon/sensor/sample/bmp180/kernel.cpp
        addon/sensor/sample/bmp180/kernel.h
        addon/sensor/sample/bmp180/main.cpp
        addon/sensor/sample/hcsr04/kernel.cpp
        addon/sensor/sample/hcsr04/kernel.h
        addon/sensor/sample/hcsr04/main.cpp
        addon/sensor/sample/mpu6050/kernel.cpp
        addon/sensor/sample/mpu6050/kernel.h
        addon/sensor/sample/mpu6050/main.cpp
        addon/sensor/bmp180.cpp
        addon/sensor/bmp180.h
        addon/sensor/hcsr04.cpp
        addon/sensor/hcsr04.h
        addon/sensor/mpu6050.cpp
        addon/sensor/mpu6050.h
        addon/Spectrum/sample/BruceLeeScr.h
        addon/Spectrum/sample/kernel.cpp
        addon/Spectrum/sample/kernel.h
        addon/Spectrum/sample/main.cpp
        addon/Spectrum/SpectrumScreen.cpp
        addon/Spectrum/SpectrumScreen.h
        addon/tftpfileserver/sample/kernel.cpp
        addon/tftpfileserver/sample/kernel.h
        addon/tftpfileserver/sample/main.cpp
        addon/tftpfileserver/tftpfileserver.cpp
        addon/tftpfileserver/tftpfileserver.h
        addon/ugui/sample/controlwindow.cpp
        addon/ugui/sample/controlwindow.h
        addon/ugui/sample/kernel.cpp
        addon/ugui/sample/kernel.h
        addon/ugui/sample/main.cpp
        addon/ugui/sample/recorder.cpp
        addon/ugui/sample/recorder.h
        addon/ugui/sample/sampler.h
        addon/ugui/sample/scopeconfig.cpp
        addon/ugui/sample/scopeconfig.h
        addon/ugui/sample/scopewindow.cpp
        addon/ugui/sample/scopewindow.h
        addon/ugui/sample/timeline.cpp
        addon/ugui/sample/timeline.h
        addon/ugui/system.h
        addon/ugui/ugui.c
        addon/ugui/ugui.h
        addon/ugui/ugui_config.h
        addon/ugui/uguicpp.cpp
        addon/ugui/uguicpp.h
        addon/vc4/interface/bcm_host/bcm_host.c
        addon/vc4/interface/bcm_host/bcm_host.h
        addon/vc4/interface/khronos/common/khrn_client.c
        addon/vc4/interface/khronos/common/khrn_client.h
        addon/vc4/interface/khronos/common/khrn_client_cache.c
        addon/vc4/interface/khronos/common/khrn_client_cache.h
        addon/vc4/interface/khronos/common/khrn_client_check_types.h
        addon/vc4/interface/khronos/common/khrn_client_cr.c
        addon/vc4/interface/khronos/common/khrn_client_global_image_map.c
        addon/vc4/interface/khronos/common/khrn_client_global_image_map.h
        addon/vc4/interface/khronos/common/khrn_client_mangle.h
        addon/vc4/interface/khronos/common/khrn_client_platform.h
        addon/vc4/interface/khronos/common/khrn_client_platform_filler_vcos.h
        addon/vc4/interface/khronos/common/khrn_client_platform_linux.c
        addon/vc4/interface/khronos/common/khrn_client_pointermap.c
        addon/vc4/interface/khronos/common/khrn_client_pointermap.h
        addon/vc4/interface/khronos/common/khrn_client_rpc.h
        addon/vc4/interface/khronos/common/khrn_client_rpc_linux.c
        addon/vc4/interface/khronos/common/khrn_client_unmangle.h
        addon/vc4/interface/khronos/common/khrn_client_vector.c
        addon/vc4/interface/khronos/common/khrn_client_vector.h
        addon/vc4/interface/khronos/common/khrn_int_color.h
        addon/vc4/interface/khronos/common/khrn_int_common.h
        addon/vc4/interface/khronos/common/khrn_int_generic_map.c
        addon/vc4/interface/khronos/common/khrn_int_generic_map.h
        addon/vc4/interface/khronos/common/khrn_int_hash.c
        addon/vc4/interface/khronos/common/khrn_int_hash.h
        addon/vc4/interface/khronos/common/khrn_int_ids.h
        addon/vc4/interface/khronos/common/khrn_int_image.c
        addon/vc4/interface/khronos/common/khrn_int_image.h
        addon/vc4/interface/khronos/common/khrn_int_math.h
        addon/vc4/interface/khronos/common/khrn_int_misc_impl.h
        addon/vc4/interface/khronos/common/khrn_int_util.c
        addon/vc4/interface/khronos/common/khrn_int_util.h
        addon/vc4/interface/khronos/common/khrn_int_util_cr.h
        addon/vc4/interface/khronos/common/khrn_options.c
        addon/vc4/interface/khronos/common/khrn_options.h
        addon/vc4/interface/khronos/common/v3d_ver.h
        addon/vc4/interface/khronos/egl/egl_client.c
        addon/vc4/interface/khronos/egl/egl_client_config.c
        addon/vc4/interface/khronos/egl/egl_client_config.h
        addon/vc4/interface/khronos/egl/egl_client_config_cr.c
        addon/vc4/interface/khronos/egl/egl_client_context.c
        addon/vc4/interface/khronos/egl/egl_client_context.h
        addon/vc4/interface/khronos/egl/egl_client_cr.c
        addon/vc4/interface/khronos/egl/egl_client_get_proc.c
        addon/vc4/interface/khronos/egl/egl_client_surface.c
        addon/vc4/interface/khronos/egl/egl_client_surface.h
        addon/vc4/interface/khronos/egl/egl_int.h
        addon/vc4/interface/khronos/egl/egl_int_config.h
        addon/vc4/interface/khronos/egl/egl_int_impl.h
        addon/vc4/interface/khronos/ext/egl_brcm_driver_monitor_client.c
        addon/vc4/interface/khronos/ext/egl_brcm_driver_monitor_client.h
        addon/vc4/interface/khronos/ext/egl_brcm_flush_client.c
        addon/vc4/interface/khronos/ext/egl_brcm_global_image_client.c
        addon/vc4/interface/khronos/ext/egl_brcm_perf_monitor_client.c
        addon/vc4/interface/khronos/ext/egl_brcm_perf_monitor_client.h
        addon/vc4/interface/khronos/ext/egl_khr_lock_surface_client.c
        addon/vc4/interface/khronos/ext/egl_khr_sync_client.c
        addon/vc4/interface/khronos/ext/egl_khr_sync_client.h
        addon/vc4/interface/khronos/ext/ext_gl_debug_marker.c
        addon/vc4/interface/khronos/ext/gl_oes_draw_texture_client.c
        addon/vc4/interface/khronos/ext/gl_oes_egl_image_client.c
        addon/vc4/interface/khronos/ext/gl_oes_framebuffer_object.c
        addon/vc4/interface/khronos/ext/gl_oes_map_buffer.c
        addon/vc4/interface/khronos/ext/gl_oes_matrix_palette_client.c
        addon/vc4/interface/khronos/ext/gl_oes_query_matrix_client.c
        addon/vc4/interface/khronos/glxx/gl11_int_config.h
        addon/vc4/interface/khronos/glxx/gl11_int_impl.h
        addon/vc4/interface/khronos/glxx/gl20_int_impl.h
        addon/vc4/interface/khronos/glxx/glxx_client.c
        addon/vc4/interface/khronos/glxx/glxx_client.h
        addon/vc4/interface/khronos/glxx/glxx_int_attrib.h
        addon/vc4/interface/khronos/glxx/glxx_int_config.h
        addon/vc4/interface/khronos/glxx/glxx_int_impl.h
        addon/vc4/interface/khronos/include/EGL/egl.h
        addon/vc4/interface/khronos/include/EGL/eglext.h
        addon/vc4/interface/khronos/include/EGL/eglext_brcm.h
        addon/vc4/interface/khronos/include/EGL/eglplatform.h
        addon/vc4/interface/khronos/include/GLES/gl.h
        addon/vc4/interface/khronos/include/GLES/glext.h
        addon/vc4/interface/khronos/include/GLES/glplatform.h
        addon/vc4/interface/khronos/include/GLES2/gl2.h
        addon/vc4/interface/khronos/include/GLES2/gl2ext.h
        addon/vc4/interface/khronos/include/GLES2/gl2platform.h
        addon/vc4/interface/khronos/include/KHR/khrplatform.h
        addon/vc4/interface/khronos/include/VG/openvg.h
        addon/vc4/interface/khronos/include/VG/vgext.h
        addon/vc4/interface/khronos/include/VG/vgplatform.h
        addon/vc4/interface/khronos/include/VG/vgu.h
        addon/vc4/interface/khronos/include/bcm_host.h
        addon/vc4/interface/khronos/vg/vg_client.c
        addon/vc4/interface/khronos/vg/vg_client.h
        addon/vc4/interface/khronos/vg/vg_config_filler_4.h
        addon/vc4/interface/khronos/vg/vg_int.h
        addon/vc4/interface/khronos/vg/vg_int_config.h
        addon/vc4/interface/khronos/vg/vg_int_impl.h
        addon/vc4/interface/khronos/vg/vg_int_mat3x3.c
        addon/vc4/interface/khronos/vg/vg_int_mat3x3.h
        addon/vc4/interface/khronos/vg/vg_int_util.h
        addon/vc4/interface/sample/hello_dispmanx/dispmanx.c
        addon/vc4/interface/sample/hello_dispmanx/kernel.cpp
        addon/vc4/interface/sample/hello_dispmanx/kernel.h
        addon/vc4/interface/sample/hello_dispmanx/main.cpp
        addon/vc4/interface/sample/hello_tiger/_main.c
        addon/vc4/interface/sample/hello_tiger/kernel.cpp
        addon/vc4/interface/sample/hello_tiger/kernel.h
        addon/vc4/interface/sample/hello_tiger/main.cpp
        addon/vc4/interface/sample/hello_tiger/tiger.c
        addon/vc4/interface/sample/hello_tiger/tiger.h
        addon/vc4/interface/sample/hello_triangle/converttool.c
        addon/vc4/interface/sample/hello_triangle/cube_texture_and_coords.h
        addon/vc4/interface/sample/hello_triangle/kernel.cpp
        addon/vc4/interface/sample/hello_triangle/kernel.h
        addon/vc4/interface/sample/hello_triangle/main.cpp
        addon/vc4/interface/sample/hello_triangle/triangle.c
        addon/vc4/interface/sample/hello_triangle2/kernel.cpp
        addon/vc4/interface/sample/hello_triangle2/kernel.h
        addon/vc4/interface/sample/hello_triangle2/main.cpp
        addon/vc4/interface/sample/hello_triangle2/triangle2.c
        addon/vc4/interface/vcinclude/common.h
        addon/vc4/interface/vcinclude/vc_display_types.h
        addon/vc4/interface/vcinclude/vc_image_types.h
        addon/vc4/interface/vcos/vcos.h
        addon/vc4/interface/vcos/vcos_abort.c
        addon/vc4/interface/vcos/vcos_assert.h
        addon/vc4/interface/vcos/vcos_atomic_flags.h
        addon/vc4/interface/vcos/vcos_attr.h
        addon/vc4/interface/vcos/vcos_backtrace.c
        addon/vc4/interface/vcos/vcos_blockpool.h
        addon/vc4/interface/vcos/vcos_common.h
        addon/vc4/interface/vcos/vcos_ctype.h
        addon/vc4/interface/vcos/vcos_deprecated.h
        addon/vc4/interface/vcos/vcos_event.h
        addon/vc4/interface/vcos/vcos_event_flags.h
        addon/vc4/interface/vcos/vcos_generic_blockpool.c
        addon/vc4/interface/vcos/vcos_generic_blockpool.h
        addon/vc4/interface/vcos/vcos_generic_event_flags.c
        addon/vc4/interface/vcos/vcos_generic_event_flags.h
        addon/vc4/interface/vcos/vcos_generic_named_sem.c
        addon/vc4/interface/vcos/vcos_generic_named_sem.h
        addon/vc4/interface/vcos/vcos_generic_quickslow_mutex.h
        addon/vc4/interface/vcos/vcos_generic_reentrant_mtx.c
        addon/vc4/interface/vcos/vcos_generic_reentrant_mtx.h
        addon/vc4/interface/vcos/vcos_generic_safe_string.c
        addon/vc4/interface/vcos/vcos_init.c
        addon/vc4/interface/vcos/vcos_init.h
        addon/vc4/interface/vcos/vcos_inttypes.h
        addon/vc4/interface/vcos/vcos_logcat.c
        addon/vc4/interface/vcos/vcos_logging.h
        addon/vc4/interface/vcos/vcos_logging_control.h
        addon/vc4/interface/vcos/vcos_mem.h
        addon/vc4/interface/vcos/vcos_mem_from_malloc.c
        addon/vc4/interface/vcos/vcos_mem_from_malloc.h
        addon/vc4/interface/vcos/vcos_msgqueue.c
        addon/vc4/interface/vcos/vcos_msgqueue.h
        addon/vc4/interface/vcos/vcos_mutex.h
        addon/vc4/interface/vcos/vcos_named_semaphore.h
        addon/vc4/interface/vcos/vcos_once.h
        addon/vc4/interface/vcos/vcos_platform.h
        addon/vc4/interface/vcos/vcos_platform_types.h
        addon/vc4/interface/vcos/vcos_pthreads.c
        addon/vc4/interface/vcos/vcos_queue.h
        addon/vc4/interface/vcos/vcos_quickslow_mutex.h
        addon/vc4/interface/vcos/vcos_reentrant_mutex.h
        addon/vc4/interface/vcos/vcos_semaphore.h
        addon/vc4/interface/vcos/vcos_stdbool.h
        addon/vc4/interface/vcos/vcos_stdint.h
        addon/vc4/interface/vcos/vcos_string.h
        addon/vc4/interface/vcos/vcos_thread.h
        addon/vc4/interface/vcos/vcos_thread_attr.h
        addon/vc4/interface/vcos/vcos_timer.h
        addon/vc4/interface/vcos/vcos_tls.h
        addon/vc4/interface/vcos/vcos_types.h
        addon/vc4/interface/vmcs_host/vc_dispmanx.h
        addon/vc4/interface/vmcs_host/vc_dispmanx_types.h
        addon/vc4/interface/vmcs_host/vc_dispservice_x_defs.h
        addon/vc4/interface/vmcs_host/vc_gencmd_defs.h
        addon/vc4/interface/vmcs_host/vc_vchi_dispmanx.c
        addon/vc4/interface/vmcs_host/vc_vchi_dispmanx.h
        addon/vc4/interface/vmcs_host/vc_vchi_dispmanx_common.h
        addon/vc4/interface/vmcs_host/vc_vchi_gencmd.c
        addon/vc4/interface/vmcs_host/vc_vchi_gencmd.h
        addon/vc4/interface/vmcs_host/vcgencmd.h
        addon/vc4/interface/vmcs_host/vchost.h
        addon/vc4/interface/vmcs_host/vchost_config.h
        addon/vc4/interface/vmcs_host/vchost_platform_config.h
        addon/vc4/sound/sample/kernel.cpp
        addon/vc4/sound/sample/kernel.h
        addon/vc4/sound/sample/main.cpp
        addon/vc4/sound/vc_vchi_audioserv_defs.h
        addon/vc4/sound/vchiqsoundbasedevice.cpp
        addon/vc4/sound/vchiqsoundbasedevice.h
        addon/vc4/sound/vchiqsounddevice.cpp
        addon/vc4/sound/vchiqsounddevice.h
        addon/vc4/vchi/connections/connection.h
        addon/vc4/vchi/message_drivers/message.h
        addon/vc4/vchi/vchi.h
        addon/vc4/vchi/vchi_cfg.h
        addon/vc4/vchi/vchi_cfg_internal.h
        addon/vc4/vchi/vchi_common.h
        addon/vc4/vchi/vchi_mh.h
        addon/vc4/vchiq/vchiq.h
        addon/vc4/vchiq/vchiq_2835.h
        addon/vc4/vchiq/vchiq_2835_arm.c
        addon/vc4/vchiq/vchiq_arm.c
        addon/vc4/vchiq/vchiq_arm.h
        addon/vc4/vchiq/vchiq_cfg.h
        addon/vc4/vchiq/vchiq_connected.c
        addon/vc4/vchiq/vchiq_connected.h
        addon/vc4/vchiq/vchiq_core.c
        addon/vc4/vchiq/vchiq_core.h
        addon/vc4/vchiq/vchiq_if.h
        addon/vc4/vchiq/vchiq_kern_lib.c
        addon/vc4/vchiq/vchiq_killable.h
        addon/vc4/vchiq/vchiq_pagelist.h
        addon/vc4/vchiq/vchiq_shim.c
        addon/vc4/vchiq/vchiq_util.c
        addon/vc4/vchiq/vchiq_util.h
        addon/vc4/vchiq/vchiqdevice.cpp
        addon/vc4/vchiq/vchiqdevice.h
        addon/webconsole/sample/kernel.cpp
        addon/webconsole/sample/kernel.h
        addon/webconsole/sample/main.cpp
        addon/webconsole/logbuffer.cpp
        addon/webconsole/logbuffer.h
        addon/webconsole/webconsole.cpp
        addon/webconsole/webconsole.h
        addon/WS28XX/sample/kernel.cpp
        addon/WS28XX/sample/kernel.h
        addon/WS28XX/sample/main.cpp
        addon/WS28XX/ws28xxstripe.cpp
        addon/WS28XX/ws28xxstripe.h
        app/lib/template/myclass.cpp
        app/lib/template/myclass.h
        app/template/kernel.cpp
        app/template/kernel.h
        app/template/main.cpp
        include/circle/bt/bcmvendor.h
        include/circle/bt/bluetooth.h
        include/circle/bt/btdevicemanager.h
        include/circle/bt/bthcilayer.h
        include/circle/bt/btinquiryresults.h
        include/circle/bt/btlogicallayer.h
        include/circle/bt/btqueue.h
        include/circle/bt/btsubsystem.h
        include/circle/bt/bttask.h
        include/circle/bt/bttransportlayer.h
        include/circle/bt/btuarttransport.h
        include/circle/fs/fat/fat.h
        include/circle/fs/fat/fatcache.h
        include/circle/fs/fat/fatdir.h
        include/circle/fs/fat/fatfs.h
        include/circle/fs/fat/fatfsdef.h
        include/circle/fs/fat/fatinfo.h
        include/circle/fs/fsdef.h
        include/circle/fs/partition.h
        include/circle/fs/partitionmanager.h
        include/circle/input/console.h
        include/circle/input/keyboardbehaviour.h
        include/circle/input/keyboardbuffer.h
        include/circle/input/keymap.h
        include/circle/input/linediscipline.h
        include/circle/input/mouse.h
        include/circle/input/mousebehaviour.h
        include/circle/input/touchscreen.h
        include/circle/net/arphandler.h
        include/circle/net/checksumcalculator.h
        include/circle/net/dhcpclient.h
        include/circle/net/dnsclient.h
        include/circle/net/http.h
        include/circle/net/httpclient.h
        include/circle/net/httpdaemon.h
        include/circle/net/icmphandler.h
        include/circle/net/in.h
        include/circle/net/ipaddress.h
        include/circle/net/linklayer.h
        include/circle/net/mqtt.h
        include/circle/net/mqttclient.h
        include/circle/net/mqttreceivepacket.h
        include/circle/net/mqttsendpacket.h
        include/circle/net/netconfig.h
        include/circle/net/netconnection.h
        include/circle/net/netdevlayer.h
        include/circle/net/netqueue.h
        include/circle/net/netsocket.h
        include/circle/net/netsubsystem.h
        include/circle/net/nettask.h
        include/circle/net/networklayer.h
        include/circle/net/ntpclient.h
        include/circle/net/ntpdaemon.h
        include/circle/net/retransmissionqueue.h
        include/circle/net/retranstimeoutcalc.h
        include/circle/net/routecache.h
        include/circle/net/socket.h
        include/circle/net/syslogdaemon.h
        include/circle/net/tcpconnection.h
        include/circle/net/tcprejector.h
        include/circle/net/tftpdaemon.h
        include/circle/net/transportlayer.h
        include/circle/net/udpconnection.h
        include/circle/sched/scheduler.h
        include/circle/sched/synchronizationevent.h
        include/circle/sched/task.h
        include/circle/sched/taskswitch.h
        include/circle/usb/dwhci.h
        include/circle/usb/dwhcidevice.h
        include/circle/usb/dwhciframeschednper.h
        include/circle/usb/dwhciframeschednsplit.h
        include/circle/usb/dwhciframeschedper.h
        include/circle/usb/dwhciframescheduler.h
        include/circle/usb/dwhciregister.h
        include/circle/usb/dwhcirootport.h
        include/circle/usb/dwhcixactqueue.h
        include/circle/usb/dwhcixferstagedata.h
        include/circle/usb/lan7800.h
        include/circle/usb/macaddress.h
        include/circle/usb/netdevice.h
        include/circle/usb/smsc951x.h
        include/circle/usb/usb.h
        include/circle/usb/usbaudio.h
        include/circle/usb/usbbluetooth.h
        include/circle/usb/usbcdcethernet.h
        include/circle/usb/usbconfigparser.h
        include/circle/usb/usbdevice.h
        include/circle/usb/usbdevicefactory.h
        include/circle/usb/usbendpoint.h
        include/circle/usb/usbfunction.h
        include/circle/usb/usbgamepad.h
        include/circle/usb/usbgamepadps3.h
        include/circle/usb/usbgamepadps4.h
        include/circle/usb/usbgamepadstandard.h
        include/circle/usb/usbgamepadswitchpro.h
        include/circle/usb/usbgamepadxbox360.h
        include/circle/usb/usbgamepadxboxone.h
        include/circle/usb/usbhid.h
        include/circle/usb/usbhiddevice.h
        include/circle/usb/usbhostcontroller.h
        include/circle/usb/usbhub.h
        include/circle/usb/usbkeyboard.h
        include/circle/usb/usbmassdevice.h
        include/circle/usb/usbmidi.h
        include/circle/usb/usbmouse.h
        include/circle/usb/usbprinter.h
        include/circle/usb/usbrequest.h
        include/circle/usb/usbstandardhub.h
        include/circle/usb/usbstring.h
        include/circle/actled.h
        include/circle/alloc.h
        include/circle/armv6mmu.h
        include/circle/armv8mmu.h
        include/circle/bcm2835.h
        include/circle/bcm2835int.h
        include/circle/bcm2836.h
        include/circle/bcmframebuffer.h
        include/circle/bcmmailbox.h
        include/circle/bcmpropertytags.h
        include/circle/bcmrandom.h
        include/circle/chargenerator.h
        include/circle/classallocator.h
        include/circle/cputhrottle.h
        include/circle/debug.h
        include/circle/device.h
        include/circle/devicenameservice.h
        include/circle/dmachannel.h
        include/circle/exception.h
        include/circle/exceptionhandler.h
        include/circle/exceptionstub.h
        include/circle/gpioclock.h
        include/circle/gpiomanager.h
        include/circle/gpiopin.h
        include/circle/gpiopinfiq.h
        include/circle/i2cmaster.h
        include/circle/i2cslave.h
        include/circle/i2ssoundbasedevice.h
        include/circle/interrupt.h
        include/circle/koptions.h
        include/circle/logger.h
        include/circle/machineinfo.h
        include/circle/macros.h
        include/circle/memio.h
        include/circle/memory.h
        include/circle/memorymap.h
        include/circle/memorymap64.h
        include/circle/multicore.h
        include/circle/nulldevice.h
        include/circle/pagetable.h
        include/circle/ptrarray.h
        include/circle/ptrlist.h
        include/circle/pwmoutput.h
        include/circle/pwmsoundbasedevice.h
        include/circle/pwmsounddevice.h
        include/circle/screen.h
        include/circle/serial.h
        include/circle/soundbasedevice.h
        include/circle/spimaster.h
        include/circle/spimasteraux.h
        include/circle/spimasterdma.h
        include/circle/spinlock.h
        include/circle/startup.h
        include/circle/stdarg.h
        include/circle/string.h
        include/circle/synchronize.h
        include/circle/synchronize64.h
        include/circle/sysconfig.h
        include/circle/time.h
        include/circle/timer.h
        include/circle/tracer.h
        include/circle/translationtable64.h
        include/circle/types.h
        include/circle/usertimer.h
        include/circle/util.h
        include/circle/version.h
        include/circle/virtualgpiopin.h
        include/assert.h
        lib/bt/btdevicemanager.cpp
        lib/bt/bthcilayer.cpp
        lib/bt/btinquiryresults.cpp
        lib/bt/btlogicallayer.cpp
        lib/bt/btqueue.cpp
        lib/bt/btsubsystem.cpp
        lib/bt/bttask.cpp
        lib/bt/btuarttransport.cpp
        lib/bt/converttool.c
        lib/fs/fat/fat.cpp
        lib/fs/fat/fatcache.cpp
        lib/fs/fat/fatdir.cpp
        lib/fs/fat/fatfs.cpp
        lib/fs/fat/fatinfo.cpp
        lib/fs/partition.cpp
        lib/fs/partitionmanager.cpp
        lib/input/console.cpp
        lib/input/keyboardbehaviour.cpp
        lib/input/keyboardbuffer.cpp
        lib/input/keymap.cpp
        lib/input/keymap_de.h
        lib/input/keymap_es.h
        lib/input/keymap_fr.h
        lib/input/keymap_it.h
        lib/input/keymap_uk.h
        lib/input/keymap_us.h
        lib/input/linediscipline.cpp
        lib/input/mouse.cpp
        lib/input/mousebehaviour.cpp
        lib/input/touchscreen.cpp
        lib/net/arphandler.cpp
        lib/net/checksumcalculator.cpp
        lib/net/dhcpclient.cpp
        lib/net/dnsclient.cpp
        lib/net/httpclient.cpp
        lib/net/httpdaemon.cpp
        lib/net/icmphandler.cpp
        lib/net/ipaddress.cpp
        lib/net/linklayer.cpp
        lib/net/mqttclient.cpp
        lib/net/mqttreceivepacket.cpp
        lib/net/mqttsendpacket.cpp
        lib/net/netconfig.cpp
        lib/net/netconnection.cpp
        lib/net/netdevlayer.cpp
        lib/net/netqueue.cpp
        lib/net/netsocket.cpp
        lib/net/netsubsystem.cpp
        lib/net/nettask.cpp
        lib/net/networklayer.cpp
        lib/net/ntpclient.cpp
        lib/net/ntpdaemon.cpp
        lib/net/retransmissionqueue.cpp
        lib/net/retranstimeoutcalc.cpp
        lib/net/routecache.cpp
        lib/net/socket.cpp
        lib/net/syslogdaemon.cpp
        lib/net/tcpconnection.cpp
        lib/net/tcprejector.cpp
        lib/net/tftpdaemon.cpp
        lib/net/transportlayer.cpp
        lib/net/udpconnection.cpp
        lib/sched/scheduler.cpp
        lib/sched/synchronizationevent.cpp
        lib/sched/task.cpp
        lib/usb/dwhcidevice.cpp
        lib/usb/dwhciframeschednper.cpp
        lib/usb/dwhciframeschednsplit.cpp
        lib/usb/dwhciframeschedper.cpp
        lib/usb/dwhciregister.cpp
        lib/usb/dwhcirootport.cpp
        lib/usb/dwhcixactqueue.cpp
        lib/usb/dwhcixferstagedata.cpp
        lib/usb/lan7800.cpp
        lib/usb/macaddress.cpp
        lib/usb/netdevice.cpp
        lib/usb/smsc951x.cpp
        lib/usb/usbbluetooth.cpp
        lib/usb/usbcdcethernet.cpp
        lib/usb/usbconfigparser.cpp
        lib/usb/usbdevice.cpp
        lib/usb/usbdevicefactory.cpp
        lib/usb/usbendpoint.cpp
        lib/usb/usbfunction.cpp
        lib/usb/usbgamepad.cpp
        lib/usb/usbgamepadps3.cpp
        lib/usb/usbgamepadps4.cpp
        lib/usb/usbgamepadstandard.cpp
        lib/usb/usbgamepadswitchpro.cpp
        lib/usb/usbgamepadxbox360.cpp
        lib/usb/usbgamepadxboxone.cpp
        lib/usb/usbhiddevice.cpp
        lib/usb/usbhostcontroller.cpp
        lib/usb/usbkeyboard.cpp
        lib/usb/usbmassdevice.cpp
        lib/usb/usbmidi.cpp
        lib/usb/usbmouse.cpp
        lib/usb/usbprinter.cpp
        lib/usb/usbrequest.cpp
        lib/usb/usbstandardhub.cpp
        lib/usb/usbstring.cpp
        lib/actled.cpp
        lib/alloc.cpp
        lib/assert.cpp
        lib/bcmframebuffer.cpp
        lib/bcmmailbox.cpp
        lib/bcmpropertytags.cpp
        lib/bcmrandom.cpp
        lib/chargenerator.cpp
        lib/classallocator.cpp
        lib/cputhrottle.cpp
        lib/debug.cpp
        lib/device.cpp
        lib/devicenameservice.cpp
        lib/dmachannel.cpp
        lib/exceptionhandler.cpp
        lib/exceptionhandler64.cpp
        lib/font.h
        lib/gpioclock.cpp
        lib/gpiomanager.cpp
        lib/gpiopin.cpp
        lib/gpiopinfiq.cpp
        lib/i2cmaster.cpp
        lib/i2cslave.cpp
        lib/i2ssoundbasedevice.cpp
        lib/interrupt.cpp
        lib/koptions.cpp
        lib/libhelper.cpp
        lib/logger.cpp
        lib/machineinfo.cpp
        lib/memory.cpp
        lib/memory64.cpp
        lib/multicore.cpp
        lib/new.cpp
        lib/nulldevice.cpp
        lib/pagetable.cpp
        lib/ptrarray.cpp
        lib/ptrlist.cpp
        lib/purecall.cpp
        lib/pwmoutput.cpp
        lib/pwmsoundbasedevice.cpp
        lib/pwmsounddevice.cpp
        lib/screen.cpp
        lib/serial.cpp
        lib/soundbasedevice.cpp
        lib/spimaster.cpp
        lib/spimasteraux.cpp
        lib/spimasterdma.cpp
        lib/spinlock.cpp
        lib/string.cpp
        lib/synchronize.cpp
        lib/synchronize64.cpp
        lib/sysinit.cpp
        lib/time.cpp
        lib/timer.cpp
        lib/tracer.cpp
        lib/translationtable64.cpp
        lib/usertimer.cpp
        lib/util.cpp
        lib/virtualgpiopin.cpp
        sample/01-gpiosimple/kernel.cpp
        sample/01-gpiosimple/kernel.h
        sample/01-gpiosimple/main.cpp
        sample/02-screenpixel/kernel.cpp
        sample/02-screenpixel/kernel.h
        sample/02-screenpixel/main.cpp
        sample/03-screentext/kernel.cpp
        sample/03-screentext/kernel.h
        sample/03-screentext/main.cpp
        sample/04-timer/kernel.cpp
        sample/04-timer/kernel.h
        sample/04-timer/main.cpp
        sample/05-usbsimple/kernel.cpp
        sample/05-usbsimple/kernel.h
        sample/05-usbsimple/main.cpp
        sample/06-usbethernet/kernel.cpp
        sample/06-usbethernet/kernel.h
        sample/06-usbethernet/main.cpp
        sample/07-usbstorage/kernel.cpp
        sample/07-usbstorage/kernel.h
        sample/07-usbstorage/main.cpp
        sample/08-usbkeyboard/kernel.cpp
        sample/08-usbkeyboard/kernel.h
        sample/08-usbkeyboard/main.cpp
        sample/09-softserial/kernel.cpp
        sample/09-softserial/kernel.h
        sample/09-softserial/main.cpp
        sample/09-softserial/softserial.cpp
        sample/09-softserial/softserial.h
        sample/10-usbmouse/kernel.cpp
        sample/10-usbmouse/kernel.h
        sample/10-usbmouse/main.cpp
        sample/11-gpioclock/kernel.cpp
        sample/11-gpioclock/kernel.h
        sample/11-gpioclock/main.cpp
        sample/11-gpioclock/sampler.h
        sample/12-pwmsound/kernel.cpp
        sample/12-pwmsound/kernel.h
        sample/12-pwmsound/main.cpp
        sample/13-pwmoutput/kernel.cpp
        sample/13-pwmoutput/kernel.h
        sample/13-pwmoutput/main.cpp
        sample/14-usbprinter/kernel.cpp
        sample/14-usbprinter/kernel.h
        sample/14-usbprinter/main.cpp
        sample/15-files/kernel.cpp
        sample/15-files/kernel.h
        sample/15-files/main.cpp
        sample/16-i2cping/master/i2cechoclient.cpp
        sample/16-i2cping/master/i2cechoclient.h
        sample/16-i2cping/master/kernel.cpp
        sample/16-i2cping/master/kernel.h
        sample/16-i2cping/master/main.cpp
        sample/16-i2cping/slave/i2cechoserver.cpp
        sample/16-i2cping/slave/i2cechoserver.h
        sample/16-i2cping/slave/kernel.cpp
        sample/16-i2cping/slave/kernel.h
        sample/16-i2cping/slave/main.cpp
        sample/16-i2cping/i2cping.h
        sample/17-fractal/kernel.cpp
        sample/17-fractal/kernel.h
        sample/17-fractal/main.cpp
        sample/17-fractal/mandelbrot.cpp
        sample/17-fractal/mandelbrot.h
        sample/18-ntptime/kernel.cpp
        sample/18-ntptime/kernel.h
        sample/18-ntptime/main.cpp
        sample/19-tasks/kernel.cpp
        sample/19-tasks/kernel.h
        sample/19-tasks/ledtask.cpp
        sample/19-tasks/ledtask.h
        sample/19-tasks/main.cpp
        sample/19-tasks/primetask.cpp
        sample/19-tasks/primetask.h
        sample/19-tasks/screentask.cpp
        sample/19-tasks/screentask.h
        sample/20-tcpsimple/echoserver.cpp
        sample/20-tcpsimple/echoserver.h
        sample/20-tcpsimple/kernel.cpp
        sample/20-tcpsimple/kernel.h
        sample/20-tcpsimple/main.cpp
        sample/21-webserver/converttool.c
        sample/21-webserver/kernel.cpp
        sample/21-webserver/kernel.h
        sample/21-webserver/main.cpp
        sample/21-webserver/webserver.cpp
        sample/21-webserver/webserver.h
        sample/22-btsimple/kernel.cpp
        sample/22-btsimple/kernel.h
        sample/22-btsimple/main.cpp
        sample/23-spisimple/kernel.cpp
        sample/23-spisimple/kernel.h
        sample/23-spisimple/main.cpp
        sample/24-hwrandom/kernel.cpp
        sample/24-hwrandom/kernel.h
        sample/24-hwrandom/main.cpp
        sample/25-spidma/kernel.cpp
        sample/25-spidma/kernel.h
        sample/25-spidma/main.cpp
        sample/26-cpustress/kernel.cpp
        sample/26-cpustress/kernel.h
        sample/26-cpustress/main.cpp
        sample/26-cpustress/mandelbrot.cpp
        sample/26-cpustress/mandelbrot.h
        sample/26-cpustress/temptask.cpp
        sample/26-cpustress/temptask.h
        sample/27-usbgamepad/kernel.cpp
        sample/27-usbgamepad/kernel.h
        sample/27-usbgamepad/main.cpp
        sample/28-touchscreen/kernel.cpp
        sample/28-touchscreen/kernel.h
        sample/28-touchscreen/main.cpp
        sample/29-miniorgan/kernel.cpp
        sample/29-miniorgan/kernel.h
        sample/29-miniorgan/main.cpp
        sample/29-miniorgan/miniorgan.cpp
        sample/29-miniorgan/miniorgan.h
        sample/30-gpiofiq/kernel.cpp
        sample/30-gpiofiq/kernel.h
        sample/30-gpiofiq/main.cpp
        sample/31-webclient/htmlscanner.cpp
        sample/31-webclient/htmlscanner.h
        sample/31-webclient/kernel.cpp
        sample/31-webclient/kernel.h
        sample/31-webclient/main.cpp
        sample/32-i2cshell/i2cshell.cpp
        sample/32-i2cshell/i2cshell.h
        sample/32-i2cshell/kernel.cpp
        sample/32-i2cshell/kernel.h
        sample/32-i2cshell/main.cpp
        sample/33-syslog/kernel.cpp
        sample/33-syslog/kernel.h
        sample/33-syslog/main.cpp
        sample/33-syslog/syslogserver.c
        sample/34-sounddevices/config.h
        sample/34-sounddevices/kernel.cpp
        sample/34-sounddevices/kernel.h
        sample/34-sounddevices/main.cpp
        sample/34-sounddevices/oscillator.cpp
        sample/34-sounddevices/oscillator.h
        sample/34-sounddevices/synthmodule.h
        sample/35-mqttclient/kernel.cpp
        sample/35-mqttclient/kernel.h
        sample/35-mqttclient/main.cpp
        sample/35-mqttclient/mqttsampleclient.cpp
        sample/35-mqttclient/mqttsampleclient.h
        sample/36-softpwm/kernel.cpp
        sample/36-softpwm/kernel.h
        sample/36-softpwm/main.cpp
        sample/36-softpwm/softpwmoutput.cpp
        sample/36-softpwm/softpwmoutput.h
        sample/37-showgamepad/kernel.cpp
        sample/37-showgamepad/kernel.h
        sample/37-showgamepad/main.cpp
        tools/bootloader/BCM2835.h
        tools/bootloader/BCM2836.h
        tools/bootloader/bootloader07.c
        tools/bootloader/periph.c)
